# Solar

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  solar.code-workspace
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
core/: AGENTS.md  bootstrap.sh  checklist-agents-validation.md  checklist-onboarding.md  mcp-catalog.md  onboarding-conversation-contract.md  orchestration-blueprint.md  report-template.md  transport-contract.md
core/commands/: solar-create-release.md  solar-validate-governance.md
core/scripts/: check-mcp.sh  create-planet.sh  create-release.sh  planet-git-bootstrap.sh  planets-workspace-doctor.sh  sun-workspace-doctor.sh  sync-clients.sh
core/skills/solar-transport-gateway/: SKILL.md  pyproject.toml
core/skills/solar-transport-gateway/assets/: system_prompt.md
core/skills/solar-transport-gateway/references/: ai-routing-policy.md  message-contract.md  telegram-webhook-flow.md
core/skills/solar-transport-gateway/scripts/: check_ai_providers.sh  check_transport_gateway.sh  configure_named_tunnel.sh  ensure_transport_gateway.sh  onboard_websocket_env.sh  run_ai_router.py  run_http_webhook_bridge.py  run_http_webhook_bridge.sh  run_websocket_bridge.py  run_websocket_bridge.sh  set_telegram_webhook.sh  setup_transport_gateway.sh  start_cloudflared_tunnel.sh  validate_websocket_bridge.sh  verify_telegram_webhook.sh
core/templates/: lead-discovery-5q.md  onboarding-profile.md  planet-AGENTS.md  planet-MEMORY.md  (+3 more)
(+74 files in other folders)
